[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/fx/ShakeCamera.gd" type="Script" id=1]
[ext_resource path="res://src/ui/Start.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/EnemyManager.gd" type="Script" id=3]
[ext_resource path="res://src/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/score.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/fx/Dust.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/ScrollingBackground.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.72758, 22.1829 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 384, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="ScrollingBackground" parent="." instance=ExtResource( 8 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Start" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_left = 0.420448
margin_top = -2.30765
margin_right = 0.420471
margin_bottom = -2.30765

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 3.0
margin_right = -8.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 96, 176 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="Dust" parent="PlayerDetector" instance=ExtResource( 7 )]
position = Vector2( 0.248825, 0.63443 )
z_index = 1
emitting = false
amount = 6
one_shot = true

[node name="ScoreDetector" type="Area2D" parent="."]
position = Vector2( 48, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreDetector"]
position = Vector2( 10.6487, 6.41081 )
shape = SubResource( 2 )

[node name="EnemyManager" type="Node2D" parent="."]
position = Vector2( 672, 160 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="EnemyManager"]
wait_time = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 254.797, 144.889 )
current = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 320, 206 )
shape = SubResource( 3 )
[connection signal="start_clicked" from="CanvasLayer/Start" to="." method="_on_Start_start_clicked"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="ScoreDetector" to="." method="_on_ScoreArea_area_entered"]
[connection signal="body_entered" from="ScoreDetector" to="." method="_on_ScoreArea_body_entered"]
[connection signal="timeout" from="EnemyManager/Timer" to="EnemyManager" method="_on_Timer_timeout"]
